# mlops-project

./: .gitignore  Makefile  README.md  et --hard f6051460  pyproject.toml  replacements.txt  requirements.txt
.dvc/: config
Data/: .gitignore  comparacion_final.csv.dvc  config.yml  online_news_cleaned.csv.dvc  online_news_modified.csv.dvc
docs/: 02_cleaned_data_report.html  03_train_set_report.html  04_test_set_report.html
docs/docs/: index.md
mlops-project/: .env.example  .gitignore  data.dvc  requirements.txt
mlops-project/docs/: EDA_numeric_no_binary.html  mkdocs.yml
mlops-project/mlflow/dev/: README.md
mlops-project/mlops_online_news_popularity/: __init__.py
mlops-project/mlops_online_news_popularity/modeling/: predict.py  train.py
mlops-project/models/: ModelTrainer.py  Model_Compare.py
mlops-project/notebooks/: Limpieza_de_datos.ipynb  news_online_eda.ipynb
mlops_online_news_popularity/: config.py  dataset.py  features.py  plots.py
mlops_online_news_popularity/data_clean/: DataCleaner.py  DataComparator.py  DataLoader.py  main.py
mlops_online_news_popularity/preprocess/: cleaning_eda.py
notebooks/: 02_clean_preprocess.ipynb  Limpieza_de_datos_v1.ipynb  mlflow-quickstart.ipynb  online_news_ml_models.ipynb  testing_news_online_popularity.ipynb
src/: __init__.py  main.py
